force-app/main/default/objects/Donation__c/Donation__c.object-meta.xml
<CustomObject>
    <label>Donation</label>
    <pluralLabel>Donations</pluralLabel>
    <nameField>
        <label>Donation Number</label>
        <type>AutoNumber</type>
        <displayFormat>DON-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>A single financial contribution from a donor to a programme.</description>
</CustomObject>