force-app/main/default/objects/Donation__c/fields/Acknowledgement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Sent__c</fullName>
    <label>Acknowledgement Sent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>