force-app/main/default/objects/Donation__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount (ZAR)</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>