force-app/main/default/objects/Donation__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>EFT</fullName><default>true</default><label>EFT</label></value>
            <value><fullName>Credit Card</fullName><default>false</default><label>Credit Card</label></value>
            <value><fullName>Cash</fullName><default>false</default><label>Cash</label></value>
            <value><fullName>Debit Order</fullName><default>false</default><label>Debit Order</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>