force-app/main/default/objects/Donation__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <label>Programme</label>
    <type>MasterDetail</type>
    <referenceTo>Programme__c</referenceTo>
    <relationshipName>Donations</relationshipName>
    <relationshipLabel>Donations</relationshipLabel>
</CustomField>